@@ -1,6 +1,10 @@
 #############################################################################
 # Makefile for building: bin/WASP_dynamic_linker
+<<<<<<< .mine
+# Generated by qmake (2.01a) (Qt 4.5.0) on: mer set 30 10:43:07 2009
+=======
 # Generated by qmake (2.01a) (Qt 4.5.2) on: Thu Sep 10 08:59:14 2009
+>>>>>>> .r16
 # Project:  WASP_dynamic_linker.pro
 # Template: app
 # Command: /usr/local/Trolltech/Qt-4.5.2/bin/qmake -unix -after  CONFIG+=release -o Makefile WASP_dynamic_linker.pro
